Added further styling to posts

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 html, body {
   background-color: #E7ECF2;
+  font-family: arial, sans-serif;
+  font-size: 14px;
+  line-height: 20px;
   margin: 0 !important;
   padding: 0 !important;
-  font-family: arial, sans-serif;
 }
 
 p {
