--- a/src/header.css
+++ b/src/header.css
@@ -4,7 +4,7 @@
   height: 35px;
   letter-spacing: 1.5px;
   margin: 0 0 20px 0;
-  padding: 20px;
+  padding: 25px 20px 10px 20px;
 }
 
 #header_links {
