--- a/src/post.css
+++ b/src/post.css
@@ -1,12 +1,12 @@
 .post {
   background-color: white;
-  margin: 20px 0 20px 0;
-  padding: 15px 20px 15px 20px;
+  margin: 20px auto 20px auto;
+  padding: 15px 15px 10px 15px;
   width: 660px;
 }
 
 .post_body {
-  padding: 10px 0 10px 0;
+  padding: 13px 0 10px 0;
 }
 
 .post_header {
